--- a/css/style.css
+++ b/css/style.css
@@ -2571,7 +2571,7 @@ div.owl-buttons {
 }
 
 .project_feature p.img_descript.project_title {
-    width: 30%;
+    width: 150px;
     float: left;
     text-align: left;
     font-size: 16px;
